<resources>
    <string name="app_name">ScrollView_WE</string>
    <string name="enter_name_hint">Enter name</string>
    <string name="enter_id_hint">Enter_ID</string>
    <string name="enter_date_of_birth_hint">Enter Date of Birth</string>
    <string name="enter_blood_group_hint">Enter Blood Group</string>
    <string name="enter_phone_number_hint">Enter Phone Number</string>
    <string name="enter_state_hint">Enter State</string>
    <string name="enter_address_hint">Enter Address</string>
    <string name="enter_district_hint">Enter District</string>
</resources>